# Math_Tutor

./: .env  .gitignore  MLOPS.md  deploy_models.py  git_filter_repo.py  objectifs.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: mlops.yml
math-tutor/: system_GB_Coach.py
math-tutor/.github/workflows/: mlops.yml  test.yml
math-tutor/docs/: TESTING.md
math-tutor/tests/: conftest.py  test_components.py  test_integration.py  test_mlops.py  test_user_interface.py  test_with_mocks.py
math_tutor/: app.py  deploy_models.py  system_GB_Coach.py
math_tutor/.streamlit/: config.toml
math_tutor/memory_db/: chroma.sqlite3
math_tutor/pages/: parametres.py  progression.py  session.py
math_tutor/students_data/: 2025052816244972.json  2025052816552444.json  2025052818000172.json  2025052818462949.json  2025052818490249.json  2025052818505781.json  2025052818574314.json  2025052819020245.json  2025052819033892.json  2025052820184427.json  2025052820521693.json  2025052820582760.json  2025052821202076.json
math_tutor/tests/: conftest.py  test-mllms_memory.py  test_components.py  test_file_processor.py  test_integration.py  test_learning_objectives.py  test_long_term_memory.py  test_performance.py  test_student_manager.py  test_user_interface.py
math_tutor/utils/: file_processor.py  long_term_memory.py
memory_db/: chroma.sqlite3
mlartifacts/326816491606654379/1bf30d90cf91472d9148d25e8bb03e57/artifacts/: agents_config.json  exercise_details.json
mlruns/0/: meta.yaml
mlruns/0/1c6835f840e648278c67c48d20e95129/: meta.yaml
mlruns/0/1e3a36cc6c404a4195519151ca905151/: meta.yaml
mlruns/0/8f59efc3966c49a5b24dba77ebdc47df/: meta.yaml
mlruns/0/ce662b19d34d411eb4cd36b13f41fd1e/: meta.yaml
mlruns/0/e7c20c6820ae4ddc9f298f36308a958a/: meta.yaml
mlruns/326816491606654379/: meta.yaml
mlruns/326816491606654379/1bf30d90cf91472d9148d25e8bb03e57/: meta.yaml
mlruns/326816491606654379/35ebe64cc7464ce289c21360a021ace3/: meta.yaml
mlruns/326816491606654379/364b73ad55c94cd8972409800acb382c/: meta.yaml
mlruns/326816491606654379/7999ca74f2554bd082a8a37566d5382f/: meta.yaml
students_data/: 2025052210425763.json  2025052905504493.json  2025052905504540.json  2025052905542406.json  2025052905542419.json  2025052905560410.json  2025052905560424.json  2025052906101114.json  2025052906120362.json  2025052906131346.json  2025052906384256.json  2025052917504656.json  2025052919064753.json  2025052919431029.json  2025052919470823.json  2025053015301489.json  2025053015423941.json  2025053117525988.json  test123.json
students_data/memory_db/: chroma.sqlite3
tests/: test_mlops.py
(+76 files in other folders)
