[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "math_tutor"
version = "0.1.0"
description = "Système de tutorat mathématique"
authors = ["Omayma <omaymafaraoui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "0.28.8"
langchain = "0.1.20"
chromadb = "0.4.24"
pytest = "8.3.5"
pytesseract = "0.3.13"
pdf2image = "1.17.0"
pillow = "10.4.0"
streamlit = "1.45.1"
pymupdf = "1.26.0"
mlflow = "2.22.0"
sentence-transformers = "4.1.0"
torch = "2.2.2"
plotly = "6.1.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["math-tutor/tests"]
markers = [
    "performance: mark tests as performance tests",
    "integration: integration tests",
    "unit: unit tests",
    "ui: user interface tests"
]

[tool.coverage.run]
source = ["math_tutor"]
omit = ["*/tests/*"]